# rust-ai-powered-cli-tools-example

./: Cargo.toml  README.md
src/: main.rs
