[package]
name = "ai-cli"
version = "0.1.0"
edition = "2024"
description = "A simple Rust AI CLI assistant powered by OpenAI API"
license = "MIT"
repository = "https://github.com/yourusername/ai-cli"

[[bin]]
name = "ai-cli"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.2", features = ["derive"] }

# Async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }

# HTTP client
reqwest = { version = "0.12.23", features = ["json"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Environment variable management
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

colored = "3.0.0"

log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
